<resources>
    <string name="google_signin_client_id" translatable="false">846781616423-v3f92os3p2m4m7ckf918f9orjahmdqaf.apps.googleusercontent.com</string>
    <string name="app_name">Canto</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="sing_by_canto" translatable="false">Sing! by Canto</string>
    <string name="continue_with">Continue with</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="login_by_phone_number">Login by Phone Number</string>
    <string name="accept_the_terms">I have read and accepted the terms and conditions</string>
    <string name="send">Send</string>
    <string name="code_was_sent_to_the_following_number">Code was send to:</string>
    <string name="didnt_receive_code">Didn\'t receive code?</string>
    <string name="wrong_phone_number">Wrong phone number?</string>
    <string name="dubsmash">Dubsmash</string>
    <string name="dubsmash_desc">Lipsync with your favorite music and create awesome videos</string>
    <string name="sing">Sing</string>
    <string name="sing_desc">Sing over your favorite music and create beautiful music videos</string>
    <string name="karaoke">Karaoke</string>
    <string name="karaoke_desc">Connect your device to an external speaker and start karaoke with your friends and family</string>
    <string name="failed_requstin_verification">Failed requesting verification</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="search_hint">Start typing to search…</string>
    <string name="you_must_play_the_song_first">You must play the song first!</string>
    <string name="recording_started">Recording started</string>
    <string name="recording_stopped">Recording stopped</string>
    <string name="download_failed_try_again">Download failed, try again.</string>
    <string name="saving_project_failed">Saving project failed!</string>
    <string name="saving_project_done">Project save to your user space.</string>
    <string name="profile">Profile</string>
    <string name="posts">Posts</string>
    <string name="story">Story</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="update_required">Update Required</string>
    <string name="update_rationale">There is a new version of Canto available in market. Please upgrade now.</string>
    <string name="login_by_email">Login by Email</string>
    <string name="invalid_phone_number">Invalid phone number (correct: 09123456789)</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="camera_open_failed">Openning your device\'s camera failed, please try again.</string>
    <string name="select_avatar">Select Avatar</string>
    <string name="your_name">Your Name</string>
    <string name="username_already_taken">UserName already taken</string>
    <string name="confirm">Confirm</string>
    <string name="canto">Canto</string>
    <string name="go_to_shop">Go to shop</string>
    <string name="you_dont_have_enough_credit">You don\'t have enough credit to continue. You can buy one of the coupon packages.</string>
    <string name="please_wait">Please wait…</string>
    <string name="payment_successful">Successful Payment</string>
    <string name="you_purchased_pack_x">You successfully purchased the %s pack.</string>
    <string name="back">Back</string>
    <string name="packages">Packages</string>
    <string name="payment_in_progress">Payment in Progress</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="purchase_failed_desc">Your purchase was not processed successfully.</string>
    <string name="purchase_song">Purchase Song</string>
    <string name="are_you_sure_to_but_x_tries">Are you sure to buy %d tries of %s?</string>
    <string name="yes_buy">Yes, Buy</string>
    <string name="purchase_song_failed">Purchase song failed</string>
    <string name="muxing_project">Muxing project</string>
    <string name="muxing_done">Mxuing done</string>
    <string name="congrats">Congratulations!</string>
    <string name="your_project_is_now_being_processed">Your project was successfully recorded and is now being processed and will be available shortly.</string>
    <string name="no_network">Network Issue</string>
    <string name="please_check_internet">We\'re having connectivity issues, please check your internet connection.</string>
    <string name="audio_track_not_found">Audio track not found</string>
    <string name="update_suggest_rationale">To receive the latest improvements and features, we suggest you receive the latest version.</string>
    <string name="ask_later">Ask Later</string>
    <string name="update">Update</string>
    <string name="update_force_rationale">To continue using Canto you to update to latest version now.</string>
    <string name="force_update">Force Update</string>
    <string name="choose_valid_username">Username can only contain alphnumeric characters with underscore and it can only start with a letter</string>
    <string name="avatar_is_mandatory">Picking an Avatar is mandatory</string>
    <string name="updating_user_failed">Updating user fialed, please try again</string>
    <string name="user_info_updated_successfully">User info updated successfully</string>
    <string name="valid_username">Valid username</string>
    <string name="login_by_google_failed">Login by Google failed</string>
    <string name="days">Days</string>
    <string name="preparing_assets">Preparing assets</string>
    <string name="downloading">Downloading…</string>
    <string name="wait_for_assets">Please wait while we prepare some assets for you!</string>
    <string name="nothing_posted_yet">Nothing posted yet</string>
    <string name="telegram_channel">Telegram Channel</string>
    <string name="instagram">Canto Instagram</string>
    <string name="request_song">Request Song</string>
    <string name="telegram_support">Telegram Support</string>
    <string name="canto_website">Canto Website</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="invite_friends">Invite Friends</string>
    <string name="handsfree">Handsfree</string>
    <string name="for_high_q_use_handsfree">For high quality recording please use a handsfree device</string>
    <string name="speaker">Speaker</string>
    <string name="for_karoke_use_speaker">For karoke mode you attach a speaker</string>
    <string name="request_song_desc">Can\'t find your favorite track? Send us its name and we\'ll provide it for you.</string>
    <string name="name_of_song_singer">Name of song and singer</string>
    <string name="muxing_failed">Muxing failed</string>
    <string name="x_days">%d days</string>
    <string name="preparing_song">Preparing song…</string>
    <string name="downloading_song">Downloading song…</string>
    <string name="select_60_sec_of_song">Select 60 seconds of the song</string>
    <string name="tap_record_to_start">Tap record button to start recording</string>
    <string name="terms">لطفاً متن زیر را به دقت بخوانید و آگاه باشید که با ثبت نام و استفاده از این اپلیکشین، با این موارد موافقت کرده‌اید:\n\n-کاربران حق استفاده از نام و هویت دیگران را ندارند.\n\n-هر گونه توهین و تمسخر مقدسات و اشخاص حقیقی و حقوقی ممنوع است.\n\n-استفاده از کلمات و عبارات رکیک ممنوع است.\n\n-توهین به مقدسات اقلیت‌های دینی و مذهبی و تحریک اذهان عمومی ممنوع است.\n\nشما با ثبت نام و استفاده از این اپلیکیشن با موارد فوق موافقت کرده‌اید و در صورت مشاهده هر گونه تخلف، اکانت کاربری توقیف خواهد شد.</string>
    <string name="show_terms">Show terms</string>
    <string name="please_accept_terms">Please read and accept terms before continuing</string>
    <string name="progres_x">Progress: %d%%</string>
    <string name="tap_play_button_start_song">Tap the PLAY button to start music playback</string>
    <string name="failed_storing_video">Storing the video failed, please try again</string>
    <string name="got_gift_code">Got gift code?</string>
    <string name="enter_gift_code">Enter gift code</string>
    <string name="validate">Validate</string>
    <string name="gift_code_is_invalid">Gift code is invalid</string>
    <string name="gift_code_is_valid">Gift code is valid</string>
    <string name="gift_code_is_applied">Your gift code was successfully applied.</string>
    <string name="apply">Apply</string>
    <string name="please_install_browser">Please install a browser to make a payment!</string>
    <string name="you_will_be_directed_to_payment_url">You will now be directed to the internet payment gateway.</string>
    <string name="payment">Payment</string>
    <string name="free">Free</string>
    <string name="save">Save</string>
    <string name="uploading">Uploading…</string>
    <string name="share">Share</string>
    <string name="videos">Videos</string>
</resources>
