<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/phoneInputWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="32dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="8dp"
    android:alpha="0"
    android:orientation="vertical"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.75">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/login_by_phone_number"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/login_input_bg"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:enabled="true"
        android:fontFamily="@font/yekan_regular"
        android:text="@string/accept_the_terms" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/login_phone_btn_bg"
        android:text="@string/send"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantoWrapper" />
</LinearLayout>