<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/codeInputWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="32dp"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="32dp"
    android:layout_marginBottom="8dp"
    android:alpha="0"
    android:orientation="vertical"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.75"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/login_by_phone_number"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/code_was_sent_to_the_following_number"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/phoneNumberView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="+989123456789"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/codeInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_input_bg"
        android:gravity="center"
        android:hint="- - - -"
        android:inputType="number"
        android:letterSpacing="1.3" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/noCodeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/didnt_receive_code"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/codeTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="0:00"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/wrongPhoneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:text="@string/wrong_phone_number"
        android:textSize="15sp" />

    <Button
        android:id="@+id/verifyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="32dp"
        android:background="@drawable/login_phone_btn_bg"
        android:text="@string/send"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantoWrapper" />
</LinearLayout>