<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.hmomeni.canto.activities.InfoActivity">

    <ImageView
        android:id="@+id/backBtn"
        style="@style/AppTheme.BackBtn"
        android:layout_width="@dimen/back_btn_size"
        android:layout_height="@dimen/back_btn_size"
        android:src="@drawable/ic_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:text="@string/canto"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/telegramChBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingRight="32dp"
            android:paddingBottom="16dp"
            android:text="@string/telegram_channel"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/instagramBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingRight="32dp"
            android:paddingBottom="16dp"
            android:text="@string/instagram"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/requestSongBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingRight="32dp"
            android:paddingBottom="16dp"
            android:text="@string/request_song"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/telegramSupportBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingRight="32dp"
            android:paddingBottom="16dp"
            android:text="@string/telegram_support"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/webSiteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingRight="32dp"
            android:paddingBottom="16dp"
            android:text="@string/canto_website"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/termsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingRight="32dp"
            android:paddingBottom="16dp"
            android:text="@string/terms_and_conditions"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/inviteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingRight="32dp"
            android:paddingBottom="16dp"
            android:text="@string/invite_friends"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/cantoLogo"
        android:layout_width="wrap_content"
        android:layout_height="113dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/canto_logo"
        app:layout_constraintBottom_toTopOf="@+id/cantoText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/cantoText"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/canto_text"
        app:layout_constraintBottom_toTopOf="@+id/tagline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/tagline"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="#83474747"
        app:layout_constraintBottom_toTopOf="@+id/version"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:text="Ver: 1.0.0"
        android:textColor="#B2B2B2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
